<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/question_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Question1Text"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_one">

            <RadioButton
                android:id="@+id/question_one_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hashtable" />

            <RadioButton
                android:id="@+id/question_one_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queue" />

            <RadioButton
                android:id="@+id/q_one_a_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stack" />

            <RadioButton
                android:id="@+id/q_one_a_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/array" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Question2Text"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radioGroupTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_two">

            <RadioButton
                android:id="@+id/question_two_answer_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TrueText" />

            <RadioButton
                android:id="@+id/question_two_answer_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FalseText" />
        </RadioGroup>

        <TextView
            android:id="@+id/question_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/Question3Text"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTwo"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/question_three_checkboxes"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/question_three">

            <CheckBox
                android:id="@+id/question_3_answer_1"
                android:layout_width="250dp"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/merge_sort"
                android:textColor="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/question_3_answer_2"
                android:layout_width="250dp"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/quick_sort"
                android:textColor="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/question_3_answer_3"
                android:layout_width="250dp"
                android:layout_height="19dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/jump_sort"
                android:textColor="@color/colorPrimaryDark" />

            <CheckBox
                android:id="@+id/question_3_answer_4"
                android:layout_width="250dp"
                android:layout_height="19dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bubble_sort"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <TextView
            android:id="@+id/question_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:text="@string/Question4Text"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_three_checkboxes"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/question_four_edit_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Question4PlaceholderText"
            android:inputType="textCapSentences|textAutoCorrect"
            app:layout_constraintTop_toBottomOf="@+id/question_four" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:onClick="submitAnswers"
            android:text="@string/Submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_four_edit_box" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>